# agy-ui-mcp

./: .agy-ui-scope.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: bootstrap.sh  install.sh
src/agy_ui_mcp/: __init__.py  __main__.py  agy_runner.py  policy_builder.py  scope.py  screenshot.py  server.py  worktree.py
templates/: agy-ui.rule.md
tests/: test_a11y.py  test_android.py  test_apply.py  test_browser_launch.py  test_diff_gate.py  test_in_place_safety.py  test_native_flow.py  test_parse_match.py  test_platform.py  test_policy_builder.py  test_prompt_targets.py  test_scope.py  test_simulator.py  test_target_cases.py  test_targets.py  test_worktree_revert.py  test_zero_config.py
